create時はリダイレクトする方針に変更 goa-cellerの実装を真似した
